--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@ az_devops_agent_version: 2.187.1
 az_devops_agent_user: "az_devops_agent"
 az_devops_agent_name: "{{ ansible_hostname }}"
 az_devops_server_url: "https://dev.azure.com/{{ az_devops_accountname }}/"
-az_devops_agent_folder: "/home/{{ az_devops_agent_user }}/agent/"
+az_devops_agent_folder: "/home/{{ az_devops_agent_user }}/agent"
 az_devops_work_folder: "/home/{{ az_devops_agent_user }}/agent/_work"
 az_devops_agent_pool_name: "Default"
 az_devops_agent_role: "build"
